[package]
name = "docker_tester"
version = "0.1.0"
edition = "2021"
description = "This library provides simple functions for starting and stopping containers using Docker."
license = "MIT"
repository = "https://github.com/startdusk/docker-tester"
categories = ["database", "test", "database-tester", "docker"]
keywords = [
  "docker",
  "tester",
  "test",
  "database",
  "database-tester"
]
documentation = "https://docs.rs/docker_tester"
readme = "README.md"
authors = [
    "startdusk<clylia217@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
